--- a/LabExercisesHTML5andCSS/09Colors/colors.html
+++ b/LabExercisesHTML5andCSS/09Colors/colors.html
@@ -5,6 +5,6 @@
     <title>Colors</title>
 </head>
 <body>
-<p>Once the <span>blue plum</span> </p>
+<p>Once the <span style="color: #6151ff">blue plum</span> met the <span style="color: #ff1d3f">red tomato</span> playing with the <span style="color: #138023">green cucumber</span>.</p>
 </body>
 </html>
