--- a/LabExercisesHTML5andCSS/08Forms/contact.html
+++ b/LabExercisesHTML5andCSS/08Forms/contact.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Contact Us</h1>
-<form>First Name: <input type="text"/></form>
-<form>Second Name: <input type="text"/></form>
-<button><input type="submit" value="Submit"/></button>
+<form><p>First Name: <input type="text"/></p>
+    <p>Second Name: <input type="text"/></form></p>
+<p><input type="submit" value="Submit"/></p></form>
 </body>
 </html>
